--- a/patient-service/pom.xml
+++ b/patient-service/pom.xml
@@ -107,10 +107,16 @@
             <version>4.29.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+           <version>3.3.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
-        <extensions>
+    <extensions>
             <!-- Ensure OS compatibility for protoc -->
             <extension>
                 <groupId>kr.motd.maven</groupId>
