Filter added in api-gateway for patient-service

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,10 +1,21 @@
-    server:
-      port: 4004
+server:
+  port: 4004
 
-    spring:
-      cloud:
-        gateway:
+spring:
+  cloud:
+    gateway:
+      server:
+        webflux:
           routes:
+            ## http://localhost:4004/auth/login
+            ## API GATEWAY -> http://auth-service:4005/login
+            - id: auth-service-route
+              uri: http://auth-service:4005
+              predicates:
+                - Path=/auth/**
+              filters:
+                - StripPrefix=1
+
             ## REST CLIENT -> http://localhost:4004/api/patients
             ## API GATEWAY -> http://patient-service:4000/patients
             ## PATIENT SERVICE -> /patients -> Patients Array
@@ -14,6 +25,8 @@
                 - Path=/api/patients/**
               filters:
                 - StripPrefix=1
+                - JwtValidation
+            ##spring looks for a class with prefix JwtValidation every request to patient service will go through this filter
 
             ## REST CLIENT -> http://localhost:4004/api-docs/patients
             ## API GATEWAY -> http://patient-service:4000/v3/api-docs
